--- a/todo.css
+++ b/todo.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rowdies&family=Titillium+Web&display=swap');
-
+*{
+    outline:none;}
 .strike {
   text-decoration: line-through;
 }
